# mcp-coupang-server

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  debug_api.py  debug_response.py  main.py  pyproject.toml  pytest.ini  test_search.py
.claude/: settings.local.json
docs/: claude-desktop-setup.md  deployment-guide.md  development-guide.md  implementation-steps.md  installation-guide.md  project-structure.md  pypi-installation-guide.md  usage-examples.md  work-progress.md
playground/: 1_simple_search.py  2_product_details.py  3_compare_products.py  4_price_filter.py  5_rocket_delivery.py  6_category_best.py  7_create_deeplinks.py  README.md
sample/: deeplink.txt  hmac_generator.py
src/: __init__.py  coupang_client.py  server.py
src/models/: product.py
src/tools/: __init__.py  details.py  search.py
src/utils/: auth.py  categories.py  config.py
tests/: test_auth.py  test_client.py  test_config.py  test_integration.py  test_models.py
