[project]
name = "mcp-coupang-server"
version = "1.0.0"
description = "MCP Server for Coupang Partners API integration with Claude Desktop"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "steve", email = "mobilenjoy@naver.com"}
]
keywords = ["mcp", "coupang", "claude", "ai", "assistant", "affiliate", "e-commerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiohttp>=3.13.2",
    "mcp[cli]>=1.19.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/space-cap/mcp-coupang-server"
Documentation = "https://github.com/space-cap/mcp-coupang-server/tree/main/docs"
Repository = "https://github.com/space-cap/mcp-coupang-server"
Issues = "https://github.com/space-cap/mcp-coupang-server/issues"

[project.scripts]
coupang-mcp-server = "src.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
